--- a/sdk/src/main/resources/config.toml
+++ b/sdk/src/main/resources/config.toml
@@ -1,3 +1,3 @@
-database = ""
+database = "mongodb://mongo:27017/?retryWrites=true&w=majority&appName=Airbrush"
 isDev = false
-whitelist = true
+whitelistEnabled = false
