chore: fix dependencies & improve discord token handling

--- a/discord/src/main/resources/plugin.toml
+++ b/discord/src/main/resources/plugin.toml
@@ -3,4 +3,4 @@ name = "Discord Integration"
 description = "Discord integration for Airbrush"
 version = "0.1.0"
 mainClass = "gg.airbrush.discord.DiscordPlugin"
-depend = ["sdk"]
+dependencies =["sdk"]
