--- a/worlds/src/main/resources/plugin.toml
+++ b/worlds/src/main/resources/plugin.toml
@@ -3,4 +3,4 @@ name = "Worlds"
 description = "World management plugin for Airbrush"
 version = "0.1.0"
 mainClass = "gg.airbrush.worlds.Worlds"
-depend = []
+dependencies =[]
