--- a/sdk/src/main/resources/translations.toml
+++ b/sdk/src/main/resources/translations.toml
@@ -49,9 +49,9 @@ exp = "<s>XP: <p>%s</p>/<p>%s"
 rank = "<s>Rank: <p>%s"
 world = "<s>World: <g>%s"
 
-[en.core.punish]
-punishment = "<s><p>%s</p> punished <p>%s</p>."
-reversion = "<s><p>%s</p> reverted the punishment of <p>%s</p>."
+[en.punishments]
+punishment = "<gray><p>%moderator%</p> banned <p>%player%</p> - <red>%short_reason%</red> [%duration%]"
+reversion = "<gray><p>%moderator%</p> reverted the punishment of <p>%player%</p>."
 
 [en.core.commands]
 discord = "<s>You can join our discord server <click:open_url:https://discord.gg/yHnenrHnsQ><p>here</p>."
