--- a/sdk/src/main/resources/translations.toml
+++ b/sdk/src/main/resources/translations.toml
@@ -50,8 +50,9 @@ rank = "<s>Rank: <p>%s"
 world = "<s>World: <g>%s"
 
 [en.punishments]
-punishment = "<gray><p>%moderator%</p> banned <p>%player%</p> - <red>%short_reason%</red> [%duration%]"
+punishment = "<gray><p>%moderator%</p> %type% <p>%player%</p> - <red>%short_reason%</red> [%duration_uppercase%]"
 reversion = "<gray><p>%moderator%</p> reverted the punishment of <p>%player%</p>."
+playerMuted = "<s><p>%long_reason%</p>. Expires in <p>%duration_lowercase%</p>."
 
 [en.core.commands]
 discord = "<s>You can join our discord server <click:open_url:https://discord.gg/yHnenrHnsQ><p>here</p>."
