--- a/discord/src/main/resources/config.toml
+++ b/discord/src/main/resources/config.toml
@@ -1,10 +1,12 @@
 botToken = "" # Discord bot token to be used for chat
-channel = "" # Channel for chat to be sent in
 
 donor = "" # Donor role ID
 superdonor = "" # Super donor role ID
-
 linkRequest = "<newline><#82a9ce>%username%<#bfdefb> requested to link their Discord<newline><#bffbdb><hover:show_text:'<#ffd4e3><i>Click to approve'><click:run_command:/link accept %sessionId%>✔ Accept </click><gray>| <#fbcebf><hover:show_text:'<#ffd4e3><i>Click to deny'><click:run_command:/link deny %sessionId%>✗ Deny</click><newline>"
+
+[channels]
+main = "" # Main chat channel ID
+log = "" # Log channel ID
 
 [join]
 content = "`[%timestamp%] %name% joined`"
