--- a/sdk/src/main/resources/translations.toml
+++ b/sdk/src/main/resources/translations.toml
@@ -49,9 +49,81 @@ exp = "<s>XP: <p>%s</p>/<p>%s"
 rank = "<s>Rank: <p>%s"
 world = "<s>World: <g>%s"
 
-[en.core.punish]
-punishment = "<s><p>%s</p> punished <p>%s</p>."
-reversion = "<s><p>%s</p> reverted the punishment of <p>%s</p>."
+[en.punishments]
+hasActivePunishment = "<error>This player already has an active punishment! Click <click:run_command:/punishment %id%><u>here</u></click> to view it."
+punishment = "<gray><p>%moderator%</p> %type% <p>%player%</p> - <red>%short_reason%</red> [%duration_uppercase%]"
+kickedPlayer = "<gray><p>%moderator%</p> %type% <p>%player%</p> - <red>%short_reason%</red>"
+reversion = "<hover:show_text:'<p>View punishment</p>'><click:run_command:/punishment %id%><gray><p>%moderator%</p> reverted <p>%player%</p> - <red>%reason%</red>"
+playerMuted = """
+        <s>%long_reason%. Expires in <p>%duration_lowercase%</p>.
+
+        <s>Think this is a mistake? Join our <click:open_url:https://discord.gg/yAgCb9AHM8><#7289da><u>here</u></click><s> to appeal.
+"""
+playerBanned = """
+        <p>Banned from</p> %title%.
+
+        <s>%long_reason%
+
+        <s>Think this is a mistake? Join https://discord.gg/yAgCb9AHM8 to appeal.
+"""
+playerKicked = """
+        <p>Kicked from</p> %title%.
+
+        <s>%long_reason%
+"""
+punishing = """
+             <#9248df>Username:</#9248df>
+             %player%
+
+             <#9248df>What are you punishing for? (p.%current_page%)</#9248df>
+             %punishments%
+"""
+confirm = """
+             <#9248df>Username:</#9248df>
+             %player%
+
+             <#9248df>You are punishing this player for:</#9248df>
+             %reason% <em>%type%</em>
+
+             <#9248df>Confirm & Issue:</#9248df>
+
+             <dark_green><click:run_command:/punish %player% %short% confirm %notes%>ISSUE</click></dark_green>
+
+             <dark_red><click:run_command:/punish %player% %short% cancel>CANCEL</click></dark_red>
+"""
+
+[en.punishments.view]
+all = """
+            <#9248df>Username:</#9248df>
+            %player%
+
+            <#9248df>Punishments:</#9248df>
+            %punishments%
+"""
+overview = """
+            <#9248df>Username:</#9248df>
+            %player%
+            <#9248df>Punished by:</#9248df>
+            %moderator%
+
+            <#9248df>Punishment:</#9248df>
+            %reason% <em>%type%</em>
+
+            <#9248df>Details:</#9248df>
+            <hover:show_text:'<p>Issued at'>Iss</hover>: %issued_at%
+            <hover:show_text:'<p>Expires at'>Exp</hover>: %expires_at%
+            Status: %status_capitalized%
+
+                <#9248df><hover:show_text:'<p>View all punishments of %player%'><click:run_command:/punishments %player%>Go back</hover> <gray>|</gray> <hover:show_text:'<p>Revert this punishment'><click:run_command:/revertpun %id%>Revert</hover>
+"""
+notes = """
+            <#9248df>Notes:</#9248df>
+            %notes%
+"""
+reverted = """
+            <#9248df>Reverted:</#9248df>
+            %reverted_reason%
+"""
 
 [en.core.commands]
 discord = "<s>You can join our discord server <click:open_url:https://discord.gg/yHnenrHnsQ><p>here</p>."
