--- a/worlds/src/main/resources/worlds.toml
+++ b/worlds/src/main/resources/worlds.toml
@@ -10,3 +10,7 @@ schematic = "schematics/spawn.schem"
 #[[template]]
 #id = "player_canvas"
 #schematic = "schematics/player_canvas.schem"
+
+[[world]]
+id = "star_world"
+schematic = "schematics/star_world.schem"
