fix(canvases): multiple things

--- a/dev-env/docker-compose.yml
+++ b/dev-env/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     volumes:
       - ./plugins:/app/plugins
       - ./airbrush.jar:/app/airbrush.jar
+      - ./canvases:/app/canvases
 
 volumes:
   airbrush-mongo-data:
