--- a/sdk/src/main/resources/translations.toml
+++ b/sdk/src/main/resources/translations.toml
@@ -12,11 +12,13 @@ welcome = """
 broadcasts = """
         <br><p>Airbrush <g>- <s>If you enjoyed the server, be sure to <y><u>/fav</u></y> it!<br>
         <br><p>Airbrush <g>- <s>Join our Discord server with <click:open_url:https://discord.gg/yAgCb9AHM8><#7289da><u>/discord</click><br>
+        <br><p>Airbrush <g>- <s>Want to paint over only one type of block? Try out <y>/mask set</y>!<br>
+        <br><p>Airbrush <g>- <s>You can unlock increased brush sizes at levels <g>5</g>, <g>15</g>, <g>25</g>, and <g>50</g>!<br>
 """
 
 [en.core.leveling]
 level_up = "<s>You have leveled up to <p>level %s</p>!"
-new_block = "<s>You have unlocked the <p>%s</p> block palette!"
+new_block = "<s>You have unlocked a new block for the <p>%s</p> block palette!"
 new_max_radius = "<s>You have unlocked a new max radius of <p>%s</p>!"
 
 [en.core.brush_gui]
