--- a/worlds/src/main/resources/worlds.toml
+++ b/worlds/src/main/resources/worlds.toml
@@ -12,5 +12,9 @@ schematic = "schematics/spawn.schem"
 #schematic = "schematics/player_canvas.schem"
 
 [[world]]
-id = "star_world"
+name = "star_world"
+schematic = "schematics/star_world.schem"
+
+[[template]]
+id = "player_canvas"
 schematic = "schematics/star_world.schem"
