fix(core): add dependency to punishments in plugin.toml

--- a/core/src/main/resources/plugin.toml
+++ b/core/src/main/resources/plugin.toml
@@ -3,4 +3,4 @@ name = "Core"
 description = "The core plugin for Airbrush"
 version = "0.1.0"
 mainClass = "gg.airbrush.core.Core"
-dependencies = ["pocket", "sdk", "worlds", "discord"]
+dependencies = ["pocket", "sdk", "worlds", "discord", "punishments"]
