feat: add instructions for debugging

--- a/dev-env/Dockerfile
+++ b/dev-env/Dockerfile
@@ -5,4 +5,6 @@ EXPOSE 25565
 ENV SERVER_PORT=25565
 COPY ./schematics ./schematics
 
+ENV JAVA_TOOL_OPTIONS -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+
 ENTRYPOINT [ "java", "-jar", "airbrush.jar" ]
