--- a/sdk/src/main/resources/config.toml
+++ b/sdk/src/main/resources/config.toml
@@ -1,3 +1,4 @@
 database = "mongodb://mongo:27017/?retryWrites=true&w=majority&appName=Airbrush"
+sqlURL = "jdbc:postgresql://postgres:5432/airbrush"
 isDev = false
 whitelistEnabled = false
